fix alignment issues

--- a/src/assets/stylesheets/layout/_country-grid.scss
+++ b/src/assets/stylesheets/layout/_country-grid.scss
@@ -7,7 +7,7 @@
   justify-content: center;
 
   @include desktop-only{
-    width: 92%;
+    width: 90%;
     justify-content: start;
   }
 }
